--- a/slides/toolchain/autotools.tex
+++ b/slides/toolchain/autotools.tex
@@ -227,6 +227,73 @@
 \footnotesize{ Взято из http://www.lrde.epita.fr/~adl/autotools.html}
 \end{frame}
 
+\begin{frame}
+\frametitle{Леденящие душу подробности \command{autoreconf}}
+
+\begin{tikzpicture}
+\dgfile (configure) at (-2,3) {\filenamew{configure}};
+\dgfile (confighin) at (.8,3) {\filenamew{config.h.in}};
+\dgfile (Makefilein) at (3.6,3) {\filenamew{Makefile.in}};
+\dgfile (src/Makefilein) at (6.4,3) {\filenamew{src/Makefile.in}};
+\uncover<all:1>{
+\tfile (autoreconf) at (2.5,6.5) {\command{autoreconf}};
+}
+
+\uncover<all:3->{
+\tfile (aclocal) at (-2,7) {\command{aclocal}};
+}
+\uncover<all:5->{
+\tfile (autoconf) at (-2,5) {\command{autoconf}};
+}
+\uncover<all:7->{
+\tfile (autoheader) at (1.75,5.75) {\command{autoheader}};
+}
+\uncover<all:9->{
+\tfile (automake) at (5.5,6.5) {\command{automake}};
+}
+
+
+\afile (configureac) at (-2,9) {\filenamew{configure.ac}};
+\uncover<all:4->{\dgfile (aclocalm4) at (1,8.5) {\filenamew{aclocal.m4}};}
+\afile (Makefileam) at (3.5,9) {\filenamew{Makefile.am}};
+\afile (src/Makefileam) at (6.5,9) {\filenamew{src/Makefile.am}};
+
+
+\uncover<all:1>{
+\arr (autoreconf) .. controls +(-10:4cm) and +(40:2cm) .. (configure);
+\arr (autoreconf) .. controls +(-5:4cm) and +(55:2cm) .. (confighin);
+\arr (autoreconf) .. controls +(0:4cm) and +(70:2cm) .. (Makefilein);
+\arr (autoreconf) .. controls +(5:4cm) and +(90:2cm) .. (src/Makefilein);
+
+\arr (configureac) .. controls +(-90:2cm) and +(180:4cm) .. (autoreconf);
+\arr (Makefileam) .. controls +(-120:2cm) and +(175:4cm) .. (autoreconf);
+\arr (src/Makefileam) .. controls +(-130:2cm) and +(170:4cm) .. (autoreconf);
+}
+\uncover<all:4->{
+\arr (configureac) .. controls +(-90:.5cm) and +(170:1.7cm) .. (aclocal);
+\arr (aclocal) .. controls +(10:2cm) and +(150:2cm) .. (aclocalm4);
+}
+\uncover<all:6->{
+\arr (configureac) .. controls +(-140:2cm) and +(175:2cm) .. (autoconf);
+\arr (aclocalm4) .. controls +(-120:2cm) and +(170:2cm) .. (autoconf);
+\arr (autoconf) .. controls +(-10:2cm) and +(90:1cm) .. (configure);
+}
+\uncover<all:8->{
+\arr (configureac) .. controls +(-50:2cm) and +(175:2.5cm) .. (autoheader);
+\arr (aclocalm4) .. controls +(-110:2cm) and +(170:2cm) .. (autoheader);
+\arr (autoheader) .. controls +(-10:2.5cm) and +(90:1cm) .. (confighin);
+}
+\uncover<all:10->{
+\arr (configureac) .. controls +(-40:3cm) and +(180:4cm) .. (automake);
+\arr (aclocalm4) .. controls +(-50:2cm) and +(176:2cm) .. (automake);
+\arr (Makefileam) .. controls +(-90:2cm) and +(173:2cm) .. (automake);
+\arr (src/Makefileam) .. controls +(-110:2cm) and +(170:2cm) .. (automake);
+\arr (automake) .. controls +(-10:2cm) and +(80:1cm) .. (Makefilein);
+\arr (automake) .. controls +(-5:2cm) and +(90:1cm) .. (src/Makefilein);
+}
+\end{tikzpicture}
+\end{frame}
+
 \begin{frame}[fragile]
  \frametitle{Возможный алгоритм использования autotools}
  \begin{itemize}
@@ -237,4 +304,61 @@
   \item Починить проблемы
   \item \verb+./configure && make && make install+
  \end{itemize}
+\end{frame}
+
+\begin{frame}[fragile]
+\frametitle{Пример \texttt{configure.ac}}
+\begin{lstlisting}[language=sh]
+AC_PREREQ(2.60)
+AC_INIT([my-package],[1.0.0],[me@maintainer.org])
+AC_CONFIG_AUX_DIR(autotools)
+
+AC_CONFIG_SRCDIR(src/my_package_main.c)
+
+AC_CONFIG_HEADER(config.h)
+AC_CONFIG_FILES([Makefile src/Makefile])
+
+AC_PROG_CC
+AC_PROG_LIBTOOL
+
+AM_INIT_AUTOMAKE([foreign -Wall -Werror])
+AC_OUTPUT
+\end{lstlisting}
+\end{frame}
+
+\begin{frame}[fragile]
+\frametitle{Пример \texttt{Makefile.am}}
+\begin{lstlisting}[language=sh]
+bin_PROGRAMS = myprogram
+lib_LTLIBRARIES = libmylibrary.la
+myprogram_SOURCES = myprogram.c myprogram.h somefunction.c somefunction.h
+myprogramm_LDADD = libmylibrary.la 
+libmylibrary_la_SOURCES = mylibfun1.c mylibfun2.c libmylibrary.h
+include_HEADERS = libmylibrary.h
+\end{lstlisting}
+\end{frame}
+
+\begin{frame}[fragile]
+\frametitle{lib LTLIBRARIES и libtool}
+\begin{itemize}
+ \item Разные системы -- разные расширения для динамических библиотек (
+\texttt{.so, .dylib, .dll})
+ \item Некоторые системы вообще не поддерживают динамическую линковку
+ \item Ответ на все это -- \texttt{libtool}
+ \item Кроме библиотеки с системным расширением создает \texttt{libsomething.la} с которой умеет работать на всех системах
+ \item \texttt{Makefile.am} -- переменная \verb+lib_LTLIBRARY+ 
+\end{itemize}
+\end{frame}
+
+\begin{frame}
+ \frametitle{Упражнение}
+ \begin{itemize}
+  \item Создать проект типа Hello,World с отдельным файлом, который будет содержать функцию \texttt{sayhelloworld} и \texttt{sayhello(char *user)} 
+  \item Создать configure.ac и Makefile.am для случая, когда hello компилируется сразу в один файл
+  \item То же самое, когда компилируется в динамическую разделяемую библиотеку и конечную программу
+ \end{itemize}
+\end{frame}
+
+\begin{frame}
+ \frametitle{Как работают \texttt{autotools}: \texttt{m4}}
 \end{frame}
