Yet another autotools slide

--- a/slides/toolchain/autotools.tex
+++ b/slides/toolchain/autotools.tex
@@ -362,3 +362,19 @@ include_HEADERS = libmylibrary.h
 \begin{frame}
  \frametitle{Как работают \texttt{autotools}: \texttt{m4}}
 \end{frame}
+
+\begin{frame}
+ \frametitle{Альтернативы autotools}
+\begin{itemize}
+  \item{Основанные на make}
+  \begin{itemize}
+    \item CMake
+    \item MakeKit
+  \end{itemize}
+  \item{Другие}
+    \begin{itemize}
+      \item SCons
+      \item rake, cabal, ant, etc.
+    \end{itemize}
+\end{itemize}
+\end{frame}
