--- a/slides/toolchain/autotools.tex
+++ b/slides/toolchain/autotools.tex
@@ -32,6 +32,9 @@
 \begin{frame}
 \frametitle{Упрощенная схема работы GNU configure}
 
+%This slide is copyright Alexandre Duret-Lutz, Laboratoire de Recherche et Développement de l'Epita 
+%Distributed under CC BY-SA 2.0 license
+%Minor changes Yury Adamov, EPAM 
 \begin{center}
 \begin{tikzpicture}
 
@@ -64,6 +67,9 @@
 \begin{center}
 \begin{tikzpicture}
 
+%This slide is copyright Alexandre Duret-Lutz, Laboratoire de Recherche et Développement de l'Epita 
+%Distributed under CC BY-SA 2.0 license
+%Minor changes Yury Adamov, EPAM 
 \dgfile (Makefilein) at (1,5) {\filenamew{Makefile.in}};
 \dgfile (src/Makefilein) at (4,5) {\filenamew{src/Makefile.in}};
 \dgfile (confighin) at (7,5) {\filenamew{config.h.in}};
@@ -166,6 +172,9 @@
 \begin{frame}
 \frametitle{Autotools: схема работы}
 
+%This slide is copyright Alexandre Duret-Lutz, Laboratoire de Recherche et Développement de l'Epita 
+%Distributed under CC BY-SA 2.0 license
+%Minor changes Yury Adamov, EPAM 
 \only<all:1-2>{\begin{center}
 \begin{tikzpicture}
 
@@ -229,7 +238,9 @@
 
 \begin{frame}
 \frametitle{Леденящие душу подробности \command{autoreconf}}
-
+%This slide is copyright Alexandre Duret-Lutz, Laboratoire de Recherche et Développement de l'Epita 
+%Distributed under CC BY-SA 2.0 license
+%Minor changes Yury Adamov, EPAM 
 \begin{tikzpicture}
 \dgfile (configure) at (-2,3) {\filenamew{configure}};
 \dgfile (confighin) at (.8,3) {\filenamew{config.h.in}};
