Added qmake to alternatives

--- a/slides/toolchain/autotools.tex
+++ b/slides/toolchain/autotools.tex
@@ -381,6 +381,7 @@ include_HEADERS = libmylibrary.h
   \begin{itemize}
     \item CMake
     \item MakeKit
+    \item qmake
   \end{itemize}
   \item{Другие}
     \begin{itemize}
