--- a/slides/elf-analysis/ldd.tex
+++ b/slides/elf-analysis/ldd.tex
@@ -13,7 +13,7 @@
 	\begin{block}{Упражнение}
 		\begin{enumerate}
 			\item Запустить {\tt ldd main-A\_B main-B\_A}
-			\item Заменить в {\tt Makefile} опцию {\tt --no-as-needed} на {\tt --as-needed}
+			\item Заменить в {\tt Makefile} опцию {\tt -{}-no-as-needed} на {\tt -{}-as-needed}
 				и перекомпилировать пример
 			\item Повторить вызов {\tt ldd}, сравнить с предыдущим и сделать выводы
 			\item Запустить {\tt ldd libtestb.so}
