--- a/slides/elf-analysis/elf-structure.tex
+++ b/slides/elf-analysis/elf-structure.tex
@@ -1,6 +1,18 @@
 %%
 
 \begin{frame}
+	\frametitle{ABI исполняемых файлов в Linux}
+
+	\begin{block}{Форматы исполняемых файлов}
+		\begin{itemize}
+			\item {\tt a.out} -- начало Unix
+			\item {\tt COFF} -- Common Object File Format -- историческое продолжение {\tt a.out}
+			\item {\tt ELF} -- Executable and Linkable Format -- настоящее Unix-like систем
+		\end{itemize}
+	\end{block}
+\end{frame}
+
+\begin{frame}
 	\frametitle{ELF}
 	\begin{columns}
 		\column{0.5\textwidth}
