gdb commands slide

--- a/slides/debug/printf.tex
+++ b/slides/debug/printf.tex
@@ -23,6 +23,8 @@
      \item Нужна перекомпиляция
      \item Нет интерактивности
      \item Нужно вычищать
+     \item Трудно печатать сложные структуры
+     \item Нет backtrace
     \end{itemize}
  \end{columns}
 \end{frame}
