--- a/slides/debug/gdb.tex
+++ b/slides/debug/gdb.tex
@@ -1,7 +1,7 @@
 \begin{frame}
   \frametitle{Базовые команды gdb}
   \begin{columns}
-    \begin{column}{width=0.3\textwidth}
+    \begin{column}{0.3\textwidth}
       \begin{itemize}
         \item help
         \item b (break)
@@ -10,7 +10,7 @@
       \end{itemize}
     \end{column}
     
-    \begin{column}{width=0.3\textwidth}
+    \begin{column}{0.3\textwidth}
       \begin{itemize}
         \item p (print)
         \item l (list)
@@ -19,7 +19,7 @@
       \end{itemize}
     \end{column}
 
-    \begin{column}{width=0.3\textwidth}
+    \begin{column}{0.3\textwidth}
       \begin{itemize}
         \item bt (backtrace)
         \item finish
@@ -57,6 +57,11 @@
 
 \begin{frame}
   \frametitle{Упражнение}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Работа со стеком}
+%+core dump
 \end{frame}
 
 \begin{frame}
