--- a/slides/debug/printf.tex
+++ b/slides/debug/printf.tex
@@ -1,7 +1,7 @@
 \begin{frame}
  \frametitle{Использование printf и логов}
  \begin{columns}
-   \column{\width=0.45\textwidth}
+   \column{0.45\textwidth}
     \begin{center}
      Преимущества 
     \end{center}
@@ -15,7 +15,7 @@
        \item В разных языках
       \end{itemize}
     \end{itemize}
-   \column{\width=0.45\textwidth}
+   \column{0.45\textwidth}
     \begin{center}
      Недостататки
     \end{center}
