--- a/slides/debug/gdb.tex
+++ b/slides/debug/gdb.tex
@@ -91,7 +91,8 @@
   \end{center}
   \begin{enumerate}
    \item Скомпилировать \texttt{segfault.c}
-   \item Установить \texttt{ulimit -c 1000}
+   \item Установить \texttt{ulimit -c 1000}\\
+	   {\small Для некоторых дистрибутивов: {\tt sysctl -w kernel.core\_pattern=core}}
    \item Запустить segfault, дождаться segmentation fault
    \item Запустить \texttt{gdb ./segfault ./core}
    \item Изучить значения переменных в текущем стековом фрейме
