--- a/epam/Presentation/16-debug.tex
+++ b/epam/Presentation/16-debug.tex
@@ -40,5 +40,8 @@
 \section{Отладка системных вызовов (strace,ltrace)}
 \mode<all>{\input{../../slides/debug/strace}}
 
+\section{Просмотр списка вызовов функций (backtrace)}
+\mode<all>{\input{../../slides/debug/backtrace}}
+
 
 \end{document}
