--- a/epam/Presentation/18-profile.tex
+++ b/epam/Presentation/18-profile.tex
@@ -1,6 +1,6 @@
 \input{common}
 
-\title[Отладка]{Отладка}
+\title[Оптимизация и профилирование]{Оптимизация и профилирование в Linux}
 
 \begin{document}
 
@@ -37,6 +37,9 @@
 
 \section{Профилирование в valgrind}
 \mode<all>{\input{../../slides/profile/valgrind-profile}}
+
+\section[oprofile]{Статистическое профилирование в oprofile}
+\mode<all>{\input{../../slides/profile/oprofile}}
 
 \section{Анализ тестового покрытия}
 \mode<all>{\input{../../slides/profile/gcov}}
