--- a/slides/profile/general.tex
+++ b/slides/profile/general.tex
@@ -17,7 +17,7 @@
   \begin{itemize}
     \item Добавление в код дополнительных инструкций (gprof)
       \begin{enumerate}
-        \item[Достоинства] Не требуется поддержка ядра, точность
+        \item[Достоинства] Не требуется поддержка ядра
         \item[Недостатки] Рекомпиляция, замедление кода
       \end{enumerate}
     \item Статистическое исследование (oprofile,perf)
@@ -36,5 +36,5 @@
           \item[Недостатки] Недостаточная информативность
        \end{enumerate}
   \end{itemize}
-
+\end{frame}
 
