--- a/slides/profile/gprof.tex
+++ b/slides/profile/gprof.tex
@@ -24,8 +24,7 @@ gprof program -A
 \begin{frame}
   \frametitle{Упражнение}
   \begin{enumerate}
-    \item Написать программу, которая в цикле вызывает функции a и b, b также вызывается внутри a
-    \item Скомпилировать с флагом \textt{-pg}
+    \item Изменить Makefile для primefactors.c, так, чтобы включить профилирование
     \item Просмотреть информацию профайлером
   \end{enumerate}
 \end{frame}
