--- a/slides/profile/valgrind-profile.tex
+++ b/slides/profile/valgrind-profile.tex
@@ -1,3 +1,14 @@
-\begin{frame}
+\begin{frame}[fragile]
  \frametitle{Valgrind callgrind}
+ \begin{itemize}
+  \item Инструмент для профилирования \verb+ --tool=callgrind+
+ \end{itemize}
+ \begin{center}
+  Упражнение
+ \end{center}
+ \begin{enumerate}
+  \item Скомпилировать ту же самую программу с ключами \verb+-g+
+  \item Запустить под valgrind
+  \item Изучить callgraph и относительное время в функциях
+ \end{enumerate}
 \end{frame}
