Use TeX ligatures; XeLaTeX requires users to explicitly enable them.

--- a/sam-solutions/linux-qa-common.tex
+++ b/sam-solutions/linux-qa-common.tex
@@ -22,8 +22,8 @@
 
 % fonts settings
 \usepackage{fontspec}
-\setmainfont{CMU Serif}                 % Computer Modern Unicode font
-\setsansfont{CMU Sans Serif}
+\setmainfont[Ligatures=TeX]{CMU Serif}                 % Computer Modern Unicode font
+\setsansfont[Ligatures=TeX]{CMU Sans Serif}
 \setmonofont{CMU Typewriter Text}
 
 \usepackage{listings}
