Some compilable intermediate version

--- a/epam/Presentation/20-version_control.tex
+++ b/epam/Presentation/20-version_control.tex
@@ -2,6 +2,7 @@
 
 \title[VCS]{Системы контроля версий}
 
+\mode<all>{\input{../../slides/toolchain/tikzinclude}}
 \begin{document}
 
 
@@ -36,6 +37,6 @@
 \mode<all>{\input{../../slides/vcs/svn}}
 
 \section{Git}
-\mode<all>{\input{../../slides/vcs/svn}}
+\mode<all>{\input{../../slides/vcs/git}}
 
 \end{document}
