All changed files commited

--- a/slides/debug/strace.tex
+++ b/slides/debug/strace.tex
@@ -40,5 +40,9 @@
  \begin{enumerate}
    \item Выяснить, какие конфигурационные файлы пытается открыть \texttt{vim}
    \item В каком системном вызове проводит больше всего времени \texttt{ls /usr/bin/}. То же для \texttt{ls -l /usr/bin}
+   \item Повторить предыдущий пункт для библиотечных вызовов.
+   \item Попробовать различные представления времени: {\tt -r}, {\tt -t},{\tt -tt},{\tt -ttt}.
  \end{enumerate}
 \end{frame}
+
+
