--- a/epam/Presentation/common.tex
+++ b/epam/Presentation/common.tex
@@ -10,7 +10,7 @@
 \usepackage[T1]{fontenc}
 
 
-\usepackage[orientation=landscape, size=custom, width=16, height=9.75, scale=0.5]{beamerposter}
+%%\usepackage[orientation=landscape, size=custom, width=16, height=9.75, scale=0.5]{beamerposter}
 
 \usepackage{textcomp}
 
