--- a/epam/Presentation/06-network.tex
+++ b/epam/Presentation/06-network.tex
@@ -1,80 +1,5 @@
-\documentclass[ignorenonframetext, professionalfonts, hyperref={pdftex, unicode}]{beamer}
-
-\usetheme{Copenhagen}
-\usecolortheme{wolverine}
-
-\usepackage[orientation=landscape, size=custom, width=16, height=9.75, scale=0.5]{beamerposter}	
-
-%Packages to be included
-
-\usepackage{textcomp}
-
-\usepackage[russian]{babel}
-\usepackage[utf8]{inputenc}
-\usepackage[T1]{fontenc}
-
-\usepackage{beamerthemesplit}
-
-\usepackage{ulem}
-
-\usepackage{verbatim}
-
-\usepackage{ucs}
-\usepackage{listings}
-\lstloadlanguages{C, make, bash}
-
-\lstset{escapechar=`,
-	extendedchars=false,
-	language=C, 
-	tabsize=2, 
-	columns=fullflexible, 
-%	basicstyle=\scriptsize,
-	keywordstyle=\color{blue}, 
-	commentstyle=\itshape\color{brown},
-%	identifierstyle=\ttfamily, 
-	stringstyle=\mdseries\color{green}, 
-	showstringspaces=false, 
-	numbers=left, 
-	numberstyle=\tiny, 
-	breaklines=true, 
-	inputencoding=utf8x,
-	keepspaces=true,
-	morekeywords={u\_short, u\_char, u\_long, in\_addr}
-	}
-
-\definecolor{darkgreen}{cmyk}{0.7, 0, 1, 0.5}
-
-\lstdefinelanguage{diff}
-{
-    morekeywords={+, -},
-    sensitive=false,
-    morecomment=[l]{//},
-    morecomment=[s]{/*}{*/},
-    morecomment=[l][\color{darkgreen}]{+},
-    morecomment=[l][\color{red}]{-},
-    morestring=[b]",
-}
-
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%% PDF meta data inserted here %%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\hypersetup{
-	pdftitle={Введение в GNU/Linux},
-	pdfauthor={Epam/LLPD}
-}
-
-
-
-
-
-%%%%%% Beamer Theme %%%%%%%%%%%%%
-
-	
+\input{common}
 \title{Введение в GNU/Linux}
-\author{Epam/LLPD}
-
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
