--- a/epam/Presentation/11-bash_variables_advanced.tex
+++ b/epam/Presentation/11-bash_variables_advanced.tex
@@ -1,84 +1,11 @@
-\documentclass[ignorenonframetext, professionalfonts, hyperref={pdftex, unicode}]{beamer}
-
-\usetheme{Copenhagen}
-\usecolortheme{wolverine}
-
-
+\input{common}
 \title[bash]{Bourne again shell}
-\author[Epam]{{\bf Epam}\\Embedded solutions department}
-
-%Packages to be included
-
-\usepackage[russian]{babel}
-\usepackage[utf8]{inputenc}
-\usepackage[T1]{fontenc}
-
-
-\usepackage[orientation=landscape, size=custom, width=16, height=9.75, scale=0.5]{beamerposter}
-
-
-\usepackage{textcomp}
-
-
-\usepackage{beamerthemesplit}
-
-\usepackage{ulem}
-
-\usepackage{verbatim}
-
-\usepackage{ucs}
-
-
-\usepackage{listings}
-\lstloadlanguages{bash}
-
-\lstset{escapechar=`,
-	extendedchars=false,
-	language=sh,
-	frame=single,
-	tabsize=2, 
-	columns=fullflexible, 
-%	basicstyle=\scriptsize,
-	keywordstyle=\color{blue}, 
-	commentstyle=\itshape\color{brown},
-%	identifierstyle=\ttfamily, 
-	stringstyle=\mdseries\color{green}, 
-	showstringspaces=false, 
-	numbers=left, 
-	numberstyle=\tiny, 
-	breaklines=true, 
-	inputencoding=utf8,
-	keepspaces=true,
-	morekeywords={u\_short, u\_char, u\_long, in\_addr}
-	}
-
-\definecolor{darkgreen}{cmyk}{0.7, 0, 1, 0.5}
-
-\lstdefinelanguage{diff}
-{
-    morekeywords={+, -},
-    sensitive=false,
-    morecomment=[l]{//},
-    morecomment=[s]{/*}{*/},
-    morecomment=[l][\color{darkgreen}]{+},
-    morecomment=[l][\color{red}]{-},
-    morestring=[b]",
-}
-
-
-
-
-\begin{document}
-
-
-
-
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%% Begin Document  %%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-
+\begin{document}
 
 \begin{frame}
 	\frametitle{BASH}
